syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum NexusOperationState {
    // Default value, unspecified state.
    NEXUS_OPERATION_STATE_UNSPECIFIED = 0;
    // Operation is in the queue waiting to be executed or is currently executing.
    NEXUS_OPERATION_STATE_SCHEDULED = 1;
    // Operation has failed with a retryable error and is backing off before the next attempt.
    NEXUS_OPERATION_STATE_BACKING_OFF = 2;
    // Operation was started and will complete asynchronously.
    NEXUS_OPERATION_STATE_STARTED = 3;
    // Operation succeeded.
    // This may happen either as a response to a start request or as reported via callback.
    NEXUS_OPERATION_STATE_SUCCEEDED = 4;
    // Operation failed either when a start request encounters a non-retryable error or as reported via callback.
    NEXUS_OPERATION_STATE_FAILED = 5;
    // Operation completed as canceled (may have not ever been delivered).
    // This may happen either as a response to a start request or as reported via callback.
    NEXUS_OPERATION_STATE_CANCELED = 6;
    // Operation timed out - exceeded the user supplied schedule-to-close timeout.
    // Any attempts to complete the operation in this state will be ignored.
    NEXUS_OPERATION_STATE_TIMED_OUT = 7;
}
